UI updates, adding animations

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Tim DiRusso's personal portfolio website." />
     <script src="https://use.fontawesome.com/fbd485fb51.js"></script>
-    <title>Tim DiRusso</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+</head>
+<title>Tim DiRusso</title>
 </head>
 
 <body>
